more updates from hipster app